# tommypkeane_com

./: .gitignore  README.md  deploy.sh  index.css  index.html  pyproject.toml  redeploy.sh
engineering/electrical/: index.html
engineering/software/: index.html  interviews.html
science/data/: index.html
science/imaging/: index.html
site-flask-mustache/www/: 404.mustache  header_contents.mustache  index.mustache  resume.mustache  settings.mustache  webapp.ini  www.py
site-flask-mustache/www/css/: colours.css  educational-dark.css  educational-light.css  (+21 more)
site-static/: index.css  index.js
site-static/mathematics/: index.html
site-tests/bootstrap-d3js/: LICENSE  README.md  index.html  index.js
webdev/: index.html
webdev/css/: colors.css  colors.html
www/: www.py
www/css/: colours-dark.css  colours-lite.css  colours.css  educational-dark.css  educational.css  error-dark.css  error.css  highlight-lite.css  highlight.css  index-dark.css  index-lite.css  index.css  mise-en-place.css  photography-dark.css  photography-lite.css  photography.css  projects-synth-dark.css  projects-synth-lite.css  projects-synth.css  projects.css  resume-cv-cpnk.css  resume-cv-lite.css  resume-cv.css  theme-cpnk.css  theme-dark.css  theme-lite.css  theme-vapr.css  theme.css  webgl.css
www/js/: cvtimeline.js  educational.js  index.js  mise-en-place.js  photography.js  synth.js  threejs-demo-intro.js
www/src/: _base.py  _util.py  ep_cookies.py  ep_educational.py  ep_main.py  ep_photography.py  ep_projects.py  ep_resume.py  ep_static.py  http_request.py
www_deploy/: webapp.ini
(+146 files in other folders)
