[tool.poetry]
name = "tommypkeane_com"
version = "2.0.0"
description = "Personal Infotainment Website of Tommy P. Keane."
authors = ["Tommy P. Keane <talk@tommypkeane.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
pystache = "^0.5.4"
commonmark = "^0.9.1"
PyYAML = "^5.4.1"
Pillow = "^8.1.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"
pytest = "^6.2.1"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
